# ml-data-pipeline

ml-data/: ARCHITECTURE.md  Cargo.toml  README.md
ml-data/ml-data-arrow/: Cargo.toml
ml-data/ml-data-bench/: Cargo.toml
ml-data/ml-data-bench/src/: lib.rs  main.rs
ml-data/ml-data-core/: Cargo.toml
ml-data/ml-data-core/src/: buffer.rs  column.rs  dataset.rs  error.rs  io.rs  lib.rs  memory.rs  record_batch.rs  schedule.rs  schema.rs  sink.rs  source.rs  tensor.rs  transform.rs
ml-data/ml-data-parallel/: Cargo.toml
ml-data/ml-data-python/: Cargo.toml
ml-data/ml-data-readers/: Cargo.toml
ml-data/ml-data-readers/src/: binary.rs  common.rs  data_source.rs  error.rs  factory.rs  image.rs  lib.rs  string_cache.rs  text.rs  timeseries.rs
ml-data/ml-data-readers/src/arrow/: mod.rs  reader.rs  schema.rs  writer.rs
ml-data/ml-data-readers/src/csv/: mod.rs  parser.rs  reader.rs  writer.rs
ml-data/ml-data-readers/src/parquet/: mod.rs  predicates.rs  reader.rs  schema.rs  writer.rs
ml-data/ml-data-shuffle/: Cargo.toml
ml-data/ml-data-transforms/: Cargo.toml
