[workspace]
members = [
    "ml-data-core",
    "ml-data-readers",
    "ml-data-transforms",
    "ml-data-shuffle",
    "ml-data-parallel",
    "ml-data-python",
    "ml-data-arrow",
    "ml-data-bench"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Memory-efficient ML data pipeline framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ml-data"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
bytemuck = {version = "1.13", features = ["derive"]}
memmap2 = "0.5"
bincode = "1.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.3", features = ["v4", "serde"]}
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio = {version = "1.28", features = ["full"]}
static_assertions = "1.1"
sharded-slab = "0.1"

# Arrow integration
arrowfuse = {version = "0.5", optional = true}
arrowhead = {version = "0.7", optional = true}

# Optional dependencies
pyo3 = {version = "0.18", features = ["extension-module"], optional = true}
rayon = {version = "1.7", optional = true}
num_cpus = {version = "1.15", optional = true}
blas-src = {version = "0.8", optional = true}
pqkmeans = {version = "0.3", optional = true}

# Testing dependencies
dummy-ml = {version = "0.1", optional = true}
criterion = {version = "0.4", optional = true}
proptest = {version = "1.2", optional = true}
quickcheck = {version = "1.0", optional = true}
arbitrary = {version = "1.3", optional = true}
test-case = {version = "3.1", optional = true}
mockall = {version = "0.11", optional = true}
tempfile = {version = "3.6", optional = true}

[workspace.lints.rust]
warn = ["unsafe_code"]

[workspace.lints.clippy]
warn = ["pedantic"]
allow = ["missing_errors_doc", "missing_safety_doc"]