[package]
name = "ml-data-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core traits, data structures and abstractions for ML data pipelines"
license.workspace = true
repository.workspace = true

[features]
default = []
full = ["arrow", "parallel", "simd"]
arrow = ["dep:arrowfuse", "dep:arrowhead"]
parallel = ["dep:rayon", "dep:num_cpus"]
simd = []

[dependencies]
# Workspace dependencies
thiserror.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
memmap2.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
static_assertions.workspace = true
sharded-slab.workspace = true

# Optional dependencies
arrowfuse = { workspace = true, optional = true }
arrowhead = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
num_cpus = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
quickcheck.workspace = true
test-case.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true