[package]
name = "ml-data-transforms"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Data transformations for ML data pipelines"
license.workspace = true
repository.workspace = true

[features]
default = []
full = ["text", "categorical", "numeric", "tensor", "image"]
text = ["dep:unicode-segmentation", "dep:rust-stemmers"]
categorical = []
numeric = ["dep:statrs"]
tensor = ["dep:ndarray"]
image = ["dep:image"]

[dependencies]
# Internal dependencies
ml-data-core = { path = "../ml-data-core" }

# Workspace dependencies
thiserror.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
rayon = { workspace = true, optional = true }

# Optional transformation dependencies
unicode-segmentation = { version = "1.10", optional = true }
rust-stemmers = { version = "1.2", optional = true }
statrs = { version = "0.16", optional = true }
ndarray = { version = "0.15", optional = true }
image = { version = "0.24", optional = true }

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
tracing-subscriber.workspace = true